Change app name to Open Proces Huis

--- a/app/index.html
+++ b/app/index.html
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
 <html lang="nl">
   <head>
-    <meta charset="utf-8">
-    <title>FrontendProcessendatabank</title>
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8" />
+    <title>Open Proces Huis</title>
+    <meta name="description" content="" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     {{content-for "head"}}
 
-    <link integrity="" rel="stylesheet" href="{{rootURL}}assets/vendor.css">
-    <link integrity="" rel="stylesheet" href="{{rootURL}}assets/frontend-processendatabank.css">
+    <link integrity="" rel="stylesheet" href="{{rootURL}}assets/vendor.css" />
+    <link
+      integrity=""
+      rel="stylesheet"
+      href="{{rootURL}}assets/frontend-openproceshuis.css"
+    />
 
     {{content-for "head-footer"}}
   </head>
@@ -17,7 +21,7 @@
     {{content-for "body"}}
 
     <script src="{{rootURL}}assets/vendor.js"></script>
-    <script src="{{rootURL}}assets/frontend-processendatabank.js"></script>
+    <script src="{{rootURL}}assets/frontend-openproceshuis.js"></script>
 
     {{content-for "body-footer"}}
   </body>
