--- a/app/index.html
+++ b/app/index.html
@@ -14,6 +14,7 @@
       rel="stylesheet"
       href="{{rootURL}}assets/frontend-openproceshuis.css"
     />
+    <link rel="icon" href="{{rootURL}}assets/images/favicon.svg" />
 
     {{content-for "head-footer"}}
   </head>
